# Intent-Segregation-Cybersecurity-Architecture-for-AI

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  REPORTED_ISSUE.md  WorkInProgress.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  security.yml
api/src/: config.rs  main.rs  middleware.rs  state.rs
api/src/handlers/: approval.rs  ledger.rs  process.rs
config/: default.toml
core/comparator/: README.md
core/comparator/examples/: basic_usage.rs
core/comparator/src/: lib.rs
core/intent_generator/src/: lib.rs
core/ledger/: Cargo.toml  README.md
core/ledger/src/: cache_helper.rs  lib.rs
core/malicious_detector/src/: lib.rs
core/notifications/src/: batcher.rs  lib.rs  service.rs
core/parsers/: Cargo.toml  README.md
core/parsers/examples/: basic_usage.rs
core/parsers/src/: cache_helper.rs  claude.rs  config.rs  deterministic.rs  ensemble.rs  lib.rs  ollama.rs  openai.rs  types.rs
core/penitent_cogitators/: Cargo.toml
core/penitent_cogitators/src/: cache_helper.rs  chatgpt.rs  claude.rs  config.rs  deepseek.rs  ensemble.rs  health_monitor.rs  lib.rs  types.rs
core/processing_engine/: README.md
core/processing_engine/examples/: basic_usage.rs
core/schema/: Cargo.toml
docs/: API_COST_OPTIMIZATION_IMPLEMENTATION.md  LLM_SECURITY_RED_TEAM_BENCHMARKS.md  MODULE_GUIDE.md  SECURITY.md
frontend/: package-lock.json  package.json
tests/redteam/: PROGRESS.md  README.md  b2b_consulting_attack.rs  customer_service_attack.rs
(+48 files in other folders)
