[package]
name = "penitent-cogitators"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
intent-redis-cache = { path = "../redis_cache", optional = true }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
chrono.workspace = true
uuid.workspace = true
sha2 = "0.10"

[features]
default = []
caching = ["intent-redis-cache"]

[dev-dependencies]
tracing-subscriber.workspace = true
